--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-      "build":"tsc-w"
+    "build": "tsc -w",
+    "start": "node build/app.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
+    
   },
   "keywords": [],
   "author": "",
@@ -21,7 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "promise-mysql": "^5.2.0"
-   
+    "promise-mysql": "^5.2.0",
+    "tsc-watch": "^6.0.4"
   }
 }
