--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "module":"commonjs",
+    "module": "commonjs",
     "esModuleInterop": true,
-    "target":"ES6",
+    "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist"
   },
-  "lib":["es2015"]
+  "lib": ["es2015"]
 }
