falta el ultimo reto

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "tsc -w",
     "start": "node build/app.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
-    
   },
   "keywords": [],
   "author": "",
@@ -25,5 +24,8 @@
     "nodemon": "^3.1.0",
     "promise-mysql": "^5.2.0",
     "tsc-watch": "^6.0.4"
+  },
+  "dependencies": {
+    "validator": "^13.11.0"
   }
 }
